# mdkcampaign-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  FRONTEND_INTEGRATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  clean_db.sql  db_schema.sql  db_types.txt  diff.txt  manage.py  models_from_db.py  pyproject.toml  setup.sh
campaign_os/: __init__.py  admin.py  settings.py  urls.py  wsgi.py
campaign_os/accounts/: __init__.py  models.py  serializers.py  urls.py  views.py
campaign_os/activities/: apps.py  models.py  serializers.py  urls.py  views.py
campaign_os/analytics/: __init__.py  models.py  serializers.py  urls.py  views.py
campaign_os/attendance/: apps.py  models.py  serializers.py  urls.py  views.py
campaign_os/beneficiaries/: apps.py  models.py  serializers.py  urls.py  views.py
campaign_os/campaigns/: __init__.py  models.py  serializers.py  urls.py  views.py
campaign_os/core/: __init__.py  models.py  permissions.py  urls.py
campaign_os/core/middleware/: __init__.py
campaign_os/dashboard/: apps.py  models.py  serializers.py  urls.py  views.py
campaign_os/elections/: __init__.py  models.py  serializers.py  urls.py  views.py
campaign_os/masters/: __init__.py  models.py  serializers.py  urls.py  views.py
campaign_os/polls/: apps.py  models.py  serializers.py  urls.py  views.py
campaign_os/telecalling/: models.py  serializers.py  urls.py  views.py  workflow.py
campaign_os/volunteers/: __init__.py  models.py  serializers.py  urls.py  views.py
campaign_os/voters/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
(+15 files in other folders)
